<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    card_view:cardCornerRadius="3dp"
    card_view:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0.1dp"
        android:orientation="vertical"
        android:background="@drawable/card_view_inner_border">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageButton
                android:id="@+id/ib_alarm_delete"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:background="@android:color/transparent"
                android:contentDescription="@string/alarm_delete_label"
                android:src="@drawable/ic_close_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="end"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_am_pm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:textColor="@color/colorGrey700"/>

                        <TextView
                            android:id="@+id/tv_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="35sp"
                            android:textColor="@color/colorGrey700"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_sun"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:layout_marginRight="5dp"
                                android:text="@string/sunday_label" />

                            <TextView
                                android:id="@+id/tv_mon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:layout_marginRight="5dp"
                                android:text="@string/monday_label" />

                            <TextView
                                android:id="@+id/tv_tue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:layout_marginRight="5dp"
                                android:text="@string/tuesday_label" />

                            <TextView
                                android:id="@+id/tv_wed"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:layout_marginRight="5dp"
                                android:text="@string/wednesday_label" />

                            <TextView
                                android:id="@+id/tv_thu"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:layout_marginRight="5dp"
                                android:text="@string/thursday_label" />

                            <TextView
                                android:id="@+id/tv_fri"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:layout_marginRight="5dp"
                                android:text="@string/friday_label" />

                            <TextView
                                android:id="@+id/tv_sat"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/saturday_label"
                                android:textAlignment="center" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_vibrate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/vibrate_label"
                                android:layout_marginEnd="7dp"
                                android:layout_marginRight="7dp"
                                android:textSize="12sp"/>

                            <TextView
                                android:id="@+id/tv_repeat"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="7dp"
                                android:layout_marginRight="7dp"
                                android:text="@string/repeat_notify_label"
                                android:textSize="12sp"/>

                            <TextView
                                android:id="@+id/tv_memo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="7dp"
                                android:layout_marginRight="7dp"
                                android:text="@string/memo_label"
                                android:textSize="12sp"/>

                            <TextView
                                android:id="@+id/tv_location"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/location_label"
                                android:textSize="12sp"/>

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <ImageButton
                android:id="@+id/ib_alarm"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:background="@android:color/transparent"
                android:contentDescription="@string/alarm_register_label"
                android:src="@drawable/ic_alarm_24dp" />

            <ImageButton
                android:id="@+id/ib_alarm_on"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:background="@android:color/transparent"
                android:contentDescription="@string/alarm_unregister_label"
                android:src="@drawable/ic_alarm_on_24dp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>