<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <include layout="@layout/toolbar"/>
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:divider="@drawable/divider"
            android:dividerPadding="5dp"
            android:showDividers="middle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alarm_time_label"
                    android:textColor="@color/colorTeal"
                    android:textSize="15sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_border"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">
                    <TimePicker
                        android:id="@+id/time_picker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:timePickerMode="spinner"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repeat_day_label"
                    android:textColor="@color/colorTeal"
                    android:textSize="15sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_border"
                    android:orientation="horizontal"
                    android:divider="?android:dividerHorizontal"
                    android:dividerPadding="15dp"
                    android:showDividers="middle">

                    <ToggleButton
                        android:id="@+id/bt_sun"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:textOn="@string/sunday_label"
                        android:textOff="@string/sunday_label"
                        android:textColor="@color/colorGrey400"
                        android:onClick="onClickToggleButton"/>

                    <ToggleButton
                        android:id="@+id/bt_mon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:textOn="@string/monday_label"
                        android:textOff="@string/monday_label"
                        android:textColor="@color/colorGrey400"
                        android:onClick="onClickToggleButton"/>

                    <ToggleButton
                        android:id="@+id/bt_tue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:textOn="@string/tuesday_label"
                        android:textOff="@string/tuesday_label"
                        android:textColor="@color/colorGrey400"
                        android:onClick="onClickToggleButton"/>

                    <ToggleButton
                        android:id="@+id/bt_wed"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:textOn="@string/wednesday_label"
                        android:textOff="@string/wednesday_label"
                        android:textColor="@color/colorGrey400"
                        android:onClick="onClickToggleButton"/>
                    <ToggleButton
                        android:id="@+id/bt_thu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:textOn="@string/thursday_label"
                        android:textOff="@string/thursday_label"
                        android:textColor="@color/colorGrey400"
                        android:onClick="onClickToggleButton"/>
                    <ToggleButton
                        android:id="@+id/bt_fri"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:textOn="@string/friday_label"
                        android:textOff="@string/friday_label"
                        android:textColor="@color/colorGrey400"
                        android:onClick="onClickToggleButton"/>
                    <ToggleButton
                        android:id="@+id/bt_sat"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:textOn="@string/saturday_label"
                        android:textOff="@string/saturday_label"
                        android:textColor="@color/colorGrey400"
                        android:onClick="onClickToggleButton"/>

                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/layout_ringtone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:onClick="onClickLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/notify_sound_label"
                    android:textSize="15sp"
                    android:textColor="@color/colorTeal"/>

                <TextView
                    android:id="@+id/tv_ringtone_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"/>

                <TextView
                    android:id="@+id/tv_ringtone_uri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:visibility="gone"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:src="@drawable/ic_volume_up_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                    android:id="@+id/seek_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:dsb_min="0"
                    app:dsb_max="100"
                    app:dsb_value="100"
                    app:dsb_progressColor="@color/colorTeal"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/repeat_notify_label"
                    android:textSize="15sp"
                    android:textColor="@color/colorTeal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:text="content" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/memo_label"
                    android:textColor="@color/colorTeal"
                    android:textSize="15sp"/>

                <EditText
                    android:id="@+id/et_memo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_border"
                    android:gravity="top"
                    android:maxLines="3"
                    android:padding="10dp"
                    android:inputType="textMultiLine"
                    android:hint="@string/memo_hint"
                    android:scrollbars="vertical"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_label"
                    android:textColor="@color/colorTeal"
                    android:textSize="15sp"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_border">
                    <fragment
                        android:id="@+id/map"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                    <ImageView
                        android:id="@+id/iv_transparent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
